SW-2960 initial commit
