# src/NotifyStatusPoller/Command/Handler/UpdateDocumentStatusHandler.php
@@ -6,6 +6,7 @@ namespace NotifyStatusPoller\Command\Handler;
 
 use GuzzleHttp\Client as GuzzleClient;
 use GuzzleHttp\Exception\GuzzleException;
+use NotifyStatusPoller\Authentication\JwtAuthentication;
 use NotifyStatusPoller\Command\Model\UpdateDocumentStatus;
 use NotifyStatusPoller\Mapper\NotifyStatus;
 use UnexpectedValueException;
@@ -14,15 +15,18 @@ class UpdateDocumentStatusHandler
 {
     private NotifyStatus $notifyStatusMapper;
     private GuzzleClient $guzzleClient;
+    private JwtAuthentication $jwtAuthenticator;
     private string $updateEndpointUrl;
 
     public function __construct(
         NotifyStatus $notifyStatusMapper,
         GuzzleClient $guzzleClient,
+        JwtAuthentication $jwtAuthenticator,
         string $updateEndpointUrl
     ) {
         $this->notifyStatusMapper = $notifyStatusMapper;
         $this->guzzleClient = $guzzleClient;
+        $this->jwtAuthenticator = $jwtAuthenticator;
         $this->updateEndpointUrl = $updateEndpointUrl;
     }
 
@@ -41,7 +45,7 @@ class UpdateDocumentStatusHandler
 
         $guzzleResponse = $this->guzzleClient->put(
             $this->updateEndpointUrl,
-            ['json' => $payload]
+            ['headers' => $this->jwtAuthenticator->buildHeaders(), 'json' => $payload ]
         );
 
         if ($guzzleResponse->getStatusCode() !== 204) {
